assets/scss/_styles_project.scss
.command-card {
    height: 9em;
    margin: 1em 1.5%;
    padding: 0;
    flex-grow: 0;
    width: 30%;
    flex-basis: 30%;

    .card {
        background-color: #fafafa;
        border: none;
        border-radius: 5px;
        height: 100%;
        padding: 1em;
        width: 100%;

        &:hover {
            background-color: #ecf7fa;
        }

        a {
            p {
                &.text-muted {
                    color: #333333!important;
                }

                &.card-title {
                    color: #0066aa;
                }
            }
        }
    }
}

.td-page-meta {
    display: flex;
    justify-content: center;

    a {
        &:first-of-type {
            margin-right: 1rem;
        }
    }
}

.command-filter {
    background-color: #f0f0f0;
    display: block;
    font-size: 0.85em;
    left: 0;
    padding: 10px 0;
    position: fixed;
    top: 4rem;
    width: 100%;
    z-index: 1;

    label {
        margin-bottom: 0;
        margin-right: 10px;
    }

    input {
        border: 1px solid #bbbbbb;
        font-size: 14px;
        margin: 0 5px;
        border-radius: 5px;
        padding: 5px 5px 6px 5px;
        width: 200px;
    }

    select {
        border: 1px solid #bbbbbb;
        height: 32px;
        font-size: 14px;
        margin: 0 5px;
    }
}

.site-footer {
    border-top: 1px solid #eeeeee;
    margin: 0 auto 3em auto;
    min-height: 36px;
    color: #777777;
    font-size: 11px;
    padding-top: 2rem;
    text-align: center;
    width: 100%;

    .container {
        background: url(https://redis.com/wp-content/themes/wpx/assets/images/icon-redis.svg) no-repeat left top;
        min-height: 36px;
        padding: 0 0 0 50px;
        position: relative;
        max-width: 474px;

        p {
            margin-bottom: 0;
            padding-top: .2rem;
        }
    }
}

h1.single-command {
    font-size: 2rem;
    font-weight: 600;
    margin-top: 3rem;
}

.alert-primary {
    border-color: #dfdfdf;
    color: #666666;
}

#content-mobile {
    .td-sidebar__search {
        input {
            display: none !important;
        }
    }
}

.td-main .container:not(.justify-content-center) {
    padding-top: 5.5rem;
}

.td-main main {
    padding-top: 1rem;
}

.sidebar-title {
    color: #222222;
    font-size: 1rem;
    font-weight: 700;
}

.td-sidebar-toc {
    border-left: none;
}

.td-toc {
    border-left: 1px solid #dee2e6;
    padding-left: 1.5rem;
}

@media (min-width: 768px) {
    .td-sidebar-nav {
        max-height: calc(100vh - 5rem);
        overflow-y: auto;
    }
}

